force-app/main/default/objects/Premise_List__c/Premise_List__c.object-meta.xml
<CustomObject>
    <description>many-to-many relationship between premise and faclity list</description>
    <label>Premise List</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Premise List ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Premise Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>