force-app/main/default/objects/Premise_List__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>end date is populated if premise moved to a new facility list</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>