force-app/main/default/objects/Premise_List__c/fields/Facility_List__c.field-meta.xml
<CustomField>
    <fullName>Facility_List__c</fullName>
    <label>Facility List</label>
    <referenceTo>Facility_List__c</referenceTo>
    <relationshipLabel>Premise Assignment</relationshipLabel>
    <relationshipName>Premise_Lists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>